[metadata]
name = python-pipes
description = Helpers to manage stdin / stdout and UNIX pipes
version = file: VERSION
long_description = file: README.rst TODO.rst
keywords = unix, pipes, stdin, stderr
license = License :: OSI Approved :: BSD License
classifiers =
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
authors = cr0hn
authors_email = cr0hn@cr0hn.com
url = https://github.com/cr0hn/python-pipes

[options]
zip_safe = True
include_package_data = True
packages = find:
